--- a/src/Row.css
+++ b/src/Row.css
@@ -9,7 +9,8 @@ h3 {
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
-  padding: 20px;
+  padding: 35px;
+  padding-bottom: 50px;
 }
 .row__posters::-webkit-scrollbar {
   display: none;
@@ -18,7 +19,7 @@ h3 {
   max-height: 150px;
   object-fit: contain;
   margin-right: 15px;
-  width: 100%;
+  width: auto;
   transition: transform 450ms;
 }
 .row__poster:hover {
@@ -30,7 +31,18 @@ h3 {
 }
 .poster__names {
   color: white;
+  font-weight: 500;
 }
 .row__tiles {
   display: flex;
+}
+.row__poster  {
+    text-align: justify;
+    /* width: [width of img]; */
+}
+
+.row__poster img {
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 10px;
 }
